Bug#54726 - Inconsistent reporting between mutex and RW lock spin rounds  - Add round counts to the output for RW s/x locks